<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/middle_yellow"
    tools:context=".ui.features.start.StartFragment">

    <TextView
        android:id="@+id/tvWakeUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/shantell_extrabold"
        android:gravity="center"
        android:text="@string/start_wake_up_with_your_friends"
        android:textSize="@dimen/text_size_24sp"
        android:textColor="@color/dark_gunmetal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegisterDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_36dp"
        android:fontFamily="@font/shantell_medium"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/start_register_description"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/dark_gunmetal"
        app:layout_constraintTop_toBottomOf="@+id/tvWakeUp" />

    <ImageView
        android:id="@+id/ivAlarmClock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="4:3"
        android:src="@drawable/ic_alarm_clock"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_darkgunmetal"
        android:fontFamily="@font/shantell_bold"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/lyRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvDontHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:fontFamily="@font/shantell_regular"
            android:gravity="center"
            android:textColor="@color/dark_gunmetal"
            android:text="@string/start_dont_have_an_account" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="@dimen/height_32dp"
            android:fontFamily="@font/shantell_bold"
            android:text="@string/register"
            android:textColor="@color/dark_gunmetal"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>