<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/shantell_bold"
        android:text="@string/reset_pw_reset_password"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSendMailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/shantell_regular"
        android:text="@string/reset_pw_we_will_send_email"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword" />

    <EditText
        android:id="@+id/etEmailForResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvSendMailText"
        app:layout_constraintStart_toStartOf="@id/tvSendMailText"
        app:layout_constraintTop_toBottomOf="@id/tvSendMailText" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etEmailForResetPassword"
        app:layout_constraintStart_toStartOf="@id/etEmailForResetPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmailForResetPassword">


        <Button
            android:id="@+id/btnCancelResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:backgroundTint="@color/gray_x11"
            android:fontFamily="@font/shantell_bold"
            android:text="@string/reset_pw_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSendResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_gunmetal"
            android:fontFamily="@font/shantell_bold"
            android:text="@string/reset_pw_send"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>